Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132752

QSqlQuery issues a deprecation warning in QMetaType

XMLWordPrintable

    • f744cef06 (dev), 97880102d (6.9)

      QSqlQuery has been made movable in 6.2, however in Qt 6 for SC/BC reasons we can't get rid of its copy operations. The copies themselves have been deprecated.
      While we no longer copy it around in Qt, QMetaType extracts the copy operations because QSqlQuery is a Q_GADGET. This raises a warning when building Qt itself.

      I propose to disable the extraction of copies from QSqlQuery. It doesn't need to be "clean" – just a local workaround to suppress the warning. It would still be a minor SIC if someone is copying QSqlQueries via QMetaType, so likely a dev-only change.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            peppe Giuseppe D'Angelo
            peppe Giuseppe D'Angelo
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes