src/corelib/kernel/qmetatype.cpp
@@ -39,6 +39,7 @@
 #  include "qcborarray.h"
 #  include "qcbormap.h"
 #  include "qbytearraylist.h"
+#  include "qloggingcategory.h"
 #  include "qmetaobject.h"
 #  include "qsequentialiterable.h"
 #  include "qassociativeiterable.h"
@@ -60,6 +61,10 @@
 #include <cstring>
 
 QT_BEGIN_NAMESPACE
+
+#ifndef QT_BOOTSTRAPPED
+Q_STATIC_LOGGING_CATEGORY(lcMetatypeDeprecated, "qt.core.qmetatype.deprecated");
+#endif
 
 #define NS(x) QT_PREPEND_NAMESPACE(x)
 
@@ -3280,6 +3285,13 @@ QMetaType::QMetaType(int typeId) : QMetaType(interfaceForType(typeId)) {}
 */
 
 namespace QtPrivate {
+#if !defined(QT_BOOTSTRAPPED)
+void QMetaTypeCopyTraits::warnAboutDeprecatedCopy(const char *name)
+{
+    qCWarning(lcMetatypeDeprecated, "QMetaType: copy construction of type '%s' is deprecated", name);
+}
+#endif
+
 #if !defined(QT_BOOTSTRAPPED) && !defined(Q_CC_MSVC) && !defined(Q_OS_INTEGRITY)
 
 // Explicit instantiation definition
